<resources>
    <string name="app_name">Wahana Marketing Club</string>
    <array name="tab_name">
        <item>Home</item>
        <item>News</item>
        <item>Chat</item>
        <item>Profile</item>
        <item>More</item>
    </array>
    <string-array name="more">
        <item>Catalog</item>
        <item>Notification</item>
        <item>History</item>
        <item>Training Schedule</item>
        <item>Event</item>
        <item>Survey</item>
        <item>Reward</item>
        <item>Quiz</item>
        <item>Report</item>
    </string-array>

    <string name="hint_email">Email</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_conf">Confirm Password</string>
    <string name="hint_hp">No Handphone</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="signup">Register</string>
    <string name="hint_username">Username</string>
    <string name="hint_choose_file">Choose a file</string>
    <string name="search_hint">Search</string>

    <!--master training-->
    <string name="training_code">Code</string>
    <string name="training_title">Title</string>
    <string name="training_description">Description</string>
    <string name="training_type">Type</string>
    <string name="training_level">Level</string>
    <string name="training_created_at">Created At</string>
    <string name="training_created_by">Created By</string>
    <string name="training_modi_at">Modified At</string>
    <string name="training_modi_by">Modified By</string>

    <!--hint master customer prospect -->
    <string name="id">ID Customer</string>
    <string name="cust_code">Kode Customer</string>
    <string name="cust_nama">Nama Customer</string>
    <string name="cust_title">Title</string>
    <string name="cust_pic">PIC Customer</string>
    <string name="cust_org">Organisasi</string>
    <string name="cust_noktp">No KTP </string>
    <string name="cust_alamat">Alamat</string>
    <string name="noktp_stnk">KTP STNK</string>
    <string name="poscode_id">Kode Pos ID</string>

    <string name="pos_code">Kode pos</string>
    <string name="pos_camat">Kecamatan</string>
    <string name="pos_lurah">Kelurahan</string>
    <string name="pos_kota">Kota</string>
    <string name="pos_propinsi">Propinsi</string>
    <string name="alamat_invoice">Alamat Invoice</string>
    <string name="alamat_kirim">Alamat Kirim</string>
    <string name="cust_telp_rumah">Telpon Rumah</string>
    <string name="cust_telp_kantor">Telpon Kantor</string>
    <string name="cust_fax">Fax</string>

    <string name="cust_hp">No Handphone</string>
    <string name="cust_hp_wa">No Handphone(Whatsapp)</string>
    <string name="cust_email">Email</string>
    <string name="cust_tgl_lahir">Tanggal Lahir</string>
    <string name="cust_agama">Agama</string>
    <string name="kerja_kode">Pekerjaan</string>
    <string name="occupation_id">Pendidikan</string>
    <string name="cust_kelamin">Jenis Kelamin</string>
    <string name="cust_jenis">Jenis Customer</string>
    <string name="cust_npwp">Npwp</string>
    <string name="salesman_id">Salesman ID</string>

    <string name="assign_to">Assign To</string>
    <string name="cust_sumber">Sumber</string>
    <string name="cust_npk">Npk</string>
    <string name="cust_kendaraaan">Kendaraan</string>
    <string name="branch_id">Branch ID</string>
    <string name="branch_code">Branch Code</string>
    <string name="company_id">Company ID</string>
    <string name="company_code">Company Code</string>
    <string name="cust_type">Type Customer</string>
    <string name="created_at">Created At</string>

    <string name="created_by">Created By</string>
    <string name="modified_at">Modified At</string>
    <string name="modi_by">Modified By</string>
    <string name="kota_id">ID kota</string>
    <string name="propinsi_id">ID Propinsi</string>
    <string name="nama_stnk">Nama STNK</string>
    <string name="alamat_stnk">Alamat STNK</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="npwp_stnk">Npwp STNK</string>
    <string name="cust_alamat2">Alamat 2</string>

    <string name="cek_alamat_kirim">Cek Alamat Kirim</string>
    <string name="pos_kota2">Kota 2</string>
    <string name="pos_prop2">Propinsi 2</string>
    <string name="propinsi_id2">ID Propinsi 2</string>
    <string name="pos_lurah2">Lurah 2</string>
    <string name="pos_kode2">Kode Pos 2</string>
    <string name="kota_id2">ID kota 2</string>
    <string name="pos_camat2">Kecamatan 2</string>
    <string name="lead_code">Lead Code</string>
    <string name="lead_id">Lead ID</string>

    <string name="cust_rt">RT Customer</string>
    <string name="cust_rw">RW Customer</string>
    <string name="dealer_id">ID Dealer</string>
    <string name="dealer_code">Kode Dealer</string>
    <string name="rt_stnk">RT STNK</string>
    <string name="rw_stnk">RW STNK</string>
    <string name="doc_1">Document 1</string>
    <string name="doc_2">Document 2</string>
    <string name="doc_3">Document 3</string>
    <string name="doc_4">Document 4</string>
    <string name="doc_5">Document 5</string>


    <!--My Profile -->
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="birth">Birth</string>
    <string name="gender">Gender</string>
    <string name="username">Username</string>
    <string name="branch">Branch</string>
    <string name="phone_number">Phone Number</string>
    <string name="change_password">Change Password</string>
    <string name="change">Save Change</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_activity">Add Activity</string>

    <!--tab activity salesmen-->
    <string name="tab_1">To Do</string>
    <string name="tab_2">Doing</string>
    <string name="tab_3">Done</string>


    <!--HINT-->
    <string name="hint_new_pass">At least 6 character</string>
    <string name="hint_birth">dd/mm/yyyy</string>
    <string name="hint_time">hh/mm</string>
    <string name="hint_gender">L/P</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internal_storage">Internal Storage</string>
</resources>
