<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/posCodeTextView"
            android:text="@string/pos_code"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textSize="@dimen/cp_textsize_small"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/kelurahanTextView"
            android:text="@string/pos_lurah"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textSize="@dimen/cp_textsize_small"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/kecamatanTextView"
            android:text="@string/pos_camat"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textSize="@dimen/cp_textsize_small"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>