<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:layout_below="@+id/edit_profile_layout"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/id_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/new_password"
            android:textColor="@color/black_1000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:background="#aaffffff"
            android:elevation="2dp"
            android:hint="@string/hint_new_pass"
            android:inputType="textPassword"
            android:padding="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/confirm_new_password"
            android:textColor="@color/black_1000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText_confrim_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:background="#aaffffff"
            android:elevation="2dp"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/button_save_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:backgroundTint="#aad1d1d1"
            android:text="@string/change" />

    </LinearLayout>


</LinearLayout>

