<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                layout="@layout/toolbar"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/id_profile"
                android:visibility="gone"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/grey_700"
                android:text="@string/display_name"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText_display_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_bg"
                android:maxLength="30"
                android:maxLines="1"
                android:textColor="@color/black_1000"
                android:textSize="16sp"
                android:padding="15dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/grey_700"
                android:text="@string/phone_number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText_phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_bg"
                android:inputType="phone"
                android:textColor="@color/black_1000"
                android:textSize="16sp"
                android:padding="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/grey_700"
                android:text="@string/birth"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText_birth"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:editable="false"
                android:focusable="false"
                android:background="@drawable/edittext_bg"
                android:textColor="@color/black_1000"
                android:textSize="16sp"
                android:padding="15dp"
                android:hint="@string/hint_birth" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/grey_700"
                android:text="@string/gender"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/genderTV"
                android:text="@string/gender"
                android:visibility="gone"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp">

                <RadioButton
                    android:id="@+id/radioButtonL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_1000"
                    android:textSize="16sp"
                    android:background="#fff"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/radioButtonP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_1000"
                    android:textSize="16sp"
                    android:background="#fff"
                    android:text="Female" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/grey_700"
                android:text="@string/email"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_bg"
                android:textColor="@color/black_1000"
                android:textSize="16sp"
                android:maxLines="1"
                android:padding="15dp" />

            <RelativeLayout
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView_change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@+id/button_save_edit_profile"
                    android:layout_marginLeft="11dp"
                    android:layout_marginStart="11dp"
                    android:padding="15dp"
                    android:textColor="@color/black_1000"
                    android:text="@string/change_password"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_save_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:text="@string/change" />

            </RelativeLayout>
        </LinearLayout>


    </ScrollView>


</LinearLayout>