<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.wahana.wahanamarketingclub.fragments.MasterPosCodeFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimary"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:textStyle="bold"
            android:textSize="@dimen/cp_toolbar_text"
            android:layout_marginLeft="15dp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            style="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title"
            android:text="Master Kode Pos"/>

        <android.support.design.widget.FloatingActionButton
            android:layout_marginRight="15dp"
            android:id="@+id/fabClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_white_24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            app:fabSize="mini"
            app:backgroundTint="@color/colorPrimary"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input_search"
            android:padding="@dimen/cp_padding_lovsearch"
            android:hint="Search"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_black"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        >

        <TextView
            android:text="@string/pos_code"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textSize="@dimen/cp_textsize_medium"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/pos_lurah"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textStyle="bold"
            android:textSize="@dimen/cp_textsize_medium"
            android:layout_height="wrap_content"
            />

        <TextView
            android:text="@string/pos_camat"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:textSize="@dimen/cp_textsize_medium"
            android:textStyle="bold"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />
</LinearLayout>
